# enka-data

./: .env.example  .gitignore  main.py  pyproject.toml
.github/workflows/: update.yml
exports/data/: weapons.json
exports/langs/: costumes.json
