[tool.poetry]
name = "enka-data"
version = "1.0.0"
description = ""
authors = ["Alarcon Ace Belen <hello@blueaxis.dev>"]

[tool.poetry.dependencies]
# core
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ipython = "^8.18.1"
isort = "^5.12.0"
pylint = "^3.0.2"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
